@@ -1,4 +1,5 @@
 HEAD
+	+ Proper check of QA updates after migration from old to new license
 	+ Make EBox::Software::listUpgradablePkgs recover form file corruption
 4.0
 	+ New welcome page on first install
